# imu

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  TESTING.md  bitbucket-pipelines.yml  imu.default  rustfmt.toml  sonar-project.properties
.config/: nextest.toml
.github/: copilot-instructions.md
.github/workflows/: build.yml  release.yml  sbom.yml  test.yml
src/: args.rs  computations.rs  connection.rs  driver.rs  main.rs  messages.rs  server.rs
tests/: integration_test.rs
