[package]
name = "maivin-imu"
description = "Maivin IMU Service"
repository = "https://bitbucket.org/au-zone/camerapose"
license = "CLOSED"
version = "0.0.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
strip = true
debug = false

[profile.profiling]
inherits = "release"
strip = false
debug = true

[dependencies]
async-std = {version = "1.12.0", features = ["attributes"] }
clap = { version = "4.4.6", features = ["derive"] }
zenoh = "0.10.0-rc"
edgefirst-schemas = "1.2.1"
cdr = "0.2.4"
bno08x = { git = "ssh://git@bitbucket.org/au-zone/bno08x-rs", rev = "9c5844f" }
log = "0.4.21"
env_logger = "0.11.2"
libc = "0.2.154"
