[package]
name = "maivin-imu"
description = "Maivin IMU Service"
repository = "https://github.com/EdgeFirstAI/imu"
license = "Apache-2.0"
version = "0.0.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
strip = true
debug = false

[profile.profiling]
inherits = "release"
strip = false
debug = true

[features]
default = ["tracy"]
tracy = ["tracing-tracy/enable", "tracy-client/enable"]
profiling = [
    "tracing-tracy/sampling",
    "tracing-tracy/system-tracing",
    "tracy-client/sampling",
    "tracy-client/system-tracing",
]

[dependencies]
bno08x = { git = "ssh://git@bitbucket.org/au-zone/bno08x-rs", tag = "1.0.1" }
cdr = "0.2.4"
clap = { version = "4.5.30", features = ["derive", "env"] }
edgefirst-schemas = "1.2.1"
libc = "0.2.154"
log = "0.4.21"
serde_json = "1.0.138"
tracing = "0.1.30"
tracing-journald = "0.3.1"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.19"
tracing-tracy = { version = "0.11.4", default-features = false, features = [
    "manual-lifetime",
    "broadcast",
    "ondemand",
    "fibers",
] }
tracy-client = { version = "0.18.0", default-features = false, features = [
    "manual-lifetime",
    "broadcast",
    "ondemand",
    "fibers",
] }
zenoh = "1.2.1"
