[package]
name = "edgefirst-imu"
description = "EdgeFirst IMU Service for BNO08x sensors"
repository = "https://github.com/EdgeFirstAI/imu"
license = "Apache-2.0"
version = "3.0.2"
edition = "2021"
rust-version = "1.90"
keywords = ["imu", "bno08x", "zenoh", "robotics", "sensor"]
categories = ["science::robotics", "embedded", "hardware-support"]

[profile.release]
opt-level = 3
lto = true
strip = true
debug = false

[profile.profiling]
inherits = "release"
strip = false
debug = true

[features]
default = ["tracy"]
tracy = ["tracing-tracy/enable", "tracy-client/enable"]
profiling = [
    "tracing-tracy/sampling",
    "tracing-tracy/system-tracing",
    "tracy-client/sampling",
    "tracy-client/system-tracing",
]

[dependencies]
bno08x-rs = "2.0.1"
clap = { version = "4.5.55", features = ["derive", "env"] }
edgefirst-schemas = "1.5.1"
libc = "0.2.180"
log = "0.4.29"
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-journald = "0.3.2"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.22"
tracing-tracy = { version = "0.11.4", default-features = false, features = [
    "manual-lifetime",
    "broadcast",
    "ondemand",
    "fibers",
] }
tracy-client = { version = "0.18.4", default-features = false, features = [
    "manual-lifetime",
    "broadcast",
    "ondemand",
    "fibers",
] }
zenoh = "1.7.2"
